// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parameter Binding File parameter binding Should able to bind array of files 1`] = `
Array [
  Object {
    "name": "clock.jpeg",
    "size": 35933,
    "type": "image/jpeg",
  },
  Object {
    "name": "dice.png",
    "size": 39545,
    "type": "image/png",
  },
  Object {
    "name": "index.html",
    "size": 385,
    "type": "text/html",
  },
]
`;

exports[`Parameter Binding File parameter binding Should able to bind file 1`] = `
Object {
  "name": "clock.jpeg",
  "size": 35933,
  "type": "image/jpeg",
}
`;
